[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://SairButton.gd" type="Script" id=2]
[ext_resource path="res://ComoJogarButton.gd" type="Script" id=3]
[ext_resource path="res://créditos.tscn" type="PackedScene" id=4]

[sub_resource type="Theme" id=1]

[sub_resource type="AnimatedTexture" id=2]

[node name="Menu" type="Control"]
margin_left = 1.0
margin_top = 112.0
margin_right = 98.0
margin_bottom = 182.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 404.0
margin_top = 104.0
margin_right = 544.0
margin_bottom = 195.0
rect_scale = Vector2( 3.88059, 3.07833 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
self_modulate = Color( 0.819608, 0.709804, 0.709804, 1 )
margin_right = 140.0
margin_bottom = 20.0
theme = SubResource( 1 )
text = "Iniciar"
icon = SubResource( 2 )

[node name="ComoJogarButton" type="Button" parent="VBoxContainer"]
modulate = Color( 0.815686, 0.733333, 0.733333, 1 )
self_modulate = Color( 0.788235, 0.721569, 0.721569, 1 )
margin_top = 24.0
margin_right = 140.0
margin_bottom = 44.0
text = "Como jogar"
script = ExtResource( 3 )

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 140.0
margin_bottom = 68.0
text = "Opções"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 140.0
margin_bottom = 92.0
text = "Créditos"

[node name="Label" parent="VBoxContainer/CreditsButton" instance=ExtResource( 4 )]

[node name="SairButton" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 140.0
margin_bottom = 116.0
text = "Sair"
script = ExtResource( 2 )

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ComoJogarButton" to="." method="_on_ComoJogarButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SairButton" to="." method="_on_SairButton_pressed"]
